Make sure anchor links are not hidden by topnav
Fixes #9931

A separate issue is making it easier to link to these anchors.
Today, you have to know about them and manually create the URL.

--- a/css/customstyles.scss
+++ b/css/customstyles.scss
@@ -223,7 +223,8 @@ h3:target:before,
 h4:target:before,
 h5:target:before,
 h6:target:before,
-td a:target:before {
+td a:target:before,
+p a[name] {
   content: '';
   display: block;
   height: 155px;
